# todoapp-htmx

./: config.py  db.py  main.py  models.py  pyproject.toml
templates/: index.html  todo_item.html
